@@ -39,7 +39,8 @@ export function InMemoryStorageFactory(params: IStorageFactoryParams): IStorageS
     }
   };
 
-  // No need to track data in localhost mode
+  // @TODO revisit storage logic in localhost mode
+  // No tracking data in localhost mode to avoid memory leaks
   if (params.settings.mode === LOCALHOST_MODE) {
     const noopTrack = () => true;
     storage.impressions.track = noopTrack;
